[package]
name = "xmz_server"
version = "0.1.0"
authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]
description = "xMZ-Mod-Touch Client Server Binaries"
documentation = "https://gaswarnanlagen.com/xmz-mod-touch"
homepage = "https://gaswarnanlagen.com/xmz-mod-touch"
repository = "https://github.com/Kliemann-Service-GmbH/xMZ-Mod-Touch-Client-Server.git"
license = "AGPL-3.0"

[dependencies]
nanomsg = "*"
xmz_shift_register = { git = "https://github.com/zzeroo/xmz_shift_register.git" }
